--- a/websites/ELTWorkshopNov2024b.html
+++ b/websites/ELTWorkshopNov2024b.html
@@ -168,7 +168,7 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
         <i class="fa fa-map-marker" style="width:30px"></i> Vienna, Austria<br>
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@univie.ac.at<br>
+        <i class="fa fa-envelope" style="width:30px"> </i> Email: [first-name].[last-name]@univie.ac.at<br>
       </div>
     </div>
   </div>
