--- a/websites/ELTWorkshopNov2024b.html
+++ b/websites/ELTWorkshopNov2024b.html
@@ -33,7 +33,7 @@ body {font-family: "Lato", sans-serif}
         <li>What do we want to see with the ELT?</li>
         <li>What can the ELT see?</li>
         <li>How can we get time to see with the ELT?</li>
-        <li>And if we cannot see with the ELT? When then?</li>
+        <li>And if we cannot see with the ELT? What then?</li>
       </ul>
     <p class="w3-justify">The ELT is nominally four years away, or <span class="w3-tag w3-red">1.33 PhDs away</span>. Time is ticking for us to start thinking about <span class="w3-tag w3-red">how to get our hands on ELT data</span> and how to write proposals that the ELT TAC will accept. Each instrument consortium is already working on these topics internally, but are we, as a community, working on this, too?</p>
     <p class="w3-justify">The Austrian Academy of Science is financing <span class="w3-tag w3-red">a series of 5 yearly meetings</span> leading up to first light. The main aim is to bring together the future ELT community and to help build the science cases and proposals that will shape the ELT’s initial observing periods.</p>
