minor improvements in responsiveness

--- a/websites/ELTWorkshopNov2024b.html
+++ b/websites/ELTWorkshopNov2024b.html
@@ -14,14 +14,14 @@
   <div class="w3-display-container w3-center">
     <img src="ELT_sun.png" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-16 w3-mobile">
-      <h1 class="w3-wide", style="font-size:54px; text-shadow: 4px 4px 6px #000000;"><b>“First-Light”</b></h1>
-      <p><b>Vienna ELT Science&nbsp;+&nbsp;Simulations Workshop&nbsp;#1</b></p>
+      <h1 class="w3-wide", style="font-size: calc(24px + 4vw); font-weight: bold; text-shadow: 4px 4px 6px #000000;">“First-Light”</h1>
+      <p style="font-size: calc(3vw); font-weight: bold; text-shadow: 2px 2px 4px #000000;">Vienna ELT Science&nbsp;+&nbsp;Simulations Workshop&nbsp;#1</p>
     </div>
   </div>
 
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
     <h1 class="w3-wide">Vienna University, Nov. 27-29, 2024</h1>
-    <p class="w3-opacity"><i>A hybrid meeting for kick-starting observation time proposals<br>for the main ELT science cases in preparation for first-light</i></p>
+    <p class="w3-opacity"><i>A hybrid meeting for kick-starting observation time proposals for the main ELT science cases in preparation for first-light</i></p>
     <h2 class="w3-wide">Why another ELT science meeting?</h2>
       <ul class="w3-ul w3-border" style="font-style:italic">
         <li>What do we want to see with the ELT?</li>
@@ -54,14 +54,14 @@
 
     <h2 class="w3-wide">Registration</h2>
     <p>The deadline for regular registration is the <span class="w3-tag w3-red w3-large">1<sup>st</sup> of November, 2024</span>. The meeting will be limited to a maximum of 25 participants, with everybody being given a chance to present their science case (~15+5 min).</p>
-    <button class="w3-button w3-green w3-round-medium" style="font-size:30px" onclick="location.href='https://www.google.com/url?q=https://forms.gle/cxQDebyBrgMJKAdL7&sa=D&source=editors&ust=1726749673562964&usg=AOvVaw13PATUwGE0XxWtewQMMFo4'">REGISTER HERE</button>
+    <button class="w3-button w3-green w3-round-medium" style="font-size:30px" onclick="javascript:window.open('https://www.google.com/url?q=https://forms.gle/cxQDebyBrgMJKAdL7&sa=D&source=editors&ust=1726749673562964&usg=AOvVaw13PATUwGE0XxWtewQMMFo4', '_blank')">REGISTER HERE</button>
     <p>PhDs and early Post-Docs are able to apply for subsidised accommodation. The registration deadline for <span class="w3-tag w3-red">subsidised hotels is 18<sup>th</sup> of October, 2024</span>.</p>
 
     <h2 class="w3-wide">Location</h2>
     <p>Main Building of the University of Vienna, <span class="w3-tag w3-red w3-large">Lecture Hall 27</span></p>
     <p>
-      <button class="w3-button w3-blue w3-round-medium" style="margin: 0px 15px" onclick="location.href='https://event.univie.ac.at/en/venue-management/locations-and-rooms/main-building-of-the-university-of-vienna/lecture-halls/hoersaal-27-lecture-hall/'">link to room</button>
-      <button class="w3-button w3-blue w3-round-medium" style="margin: 0px 15px" onclick="location.href='https://event.univie.ac.at/fileadmin/user_upload/d_event/Dokumente/Raummanagement/PLAENE_NEU/Plaene_Hauptgebaeude/Gebaeudeplan/univie_Lageplaene_Hauptgebaeude_2019.pdf'">building floorplan</button>
+      <button class="w3-button w3-blue w3-round-medium" style="margin: 0px 15px" onclick="javascript:window.open('https://event.univie.ac.at/en/venue-management/locations-and-rooms/main-building-of-the-university-of-vienna/lecture-halls/hoersaal-27-lecture-hall/', '_blank')">link to room</button>
+      <button class="w3-button w3-blue w3-round-medium" style="margin: 0px 15px" onclick="javascript:window.open('https://event.univie.ac.at/fileadmin/user_upload/d_event/Dokumente/Raummanagement/PLAENE_NEU/Plaene_Hauptgebaeude/Gebaeudeplan/univie_Lageplaene_Hauptgebaeude_2019.pdf', '_blank')">building floorplan</button>
     </p>
     <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3205.0104527152153!2d16.358380986014478!3d48.21318548791608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d07bdebd3d9dd%3A0xd7f665432f73f3c4!2sUniversity%20of%20Vienna!5e1!3m2!1sen!2sat!4v1727044069211!5m2!1sen!2sat" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
   </div>
