Add keynote speakers

--- a/websites/ELTWorkshopNov2024.html
+++ b/websites/ELTWorkshopNov2024.html
@@ -37,7 +37,7 @@
     <p class="w3-justify">The meeting will complement traditional <span class="w3-tag w3-red">scientific presentations</span> in the mornings with an observation <span class="w3-tag w3-red">simulation hackathon</span> in the afternoons.</p>
 
     <div class="w3-row w3-padding-32">
-      <h2>Goals of this Meeting</h2>
+      <h2 class="w3-wide">Goals of this Meeting</h2>
       <div class="w3-quarter w3-row-padding">
         <p>Raise awareness of the main ELT science cases for the first light instruments MICADO and METIS through a series of scientific presentations (6x 1.5hr sessions @ 15+5 min presentations).</p>
       </div>
@@ -49,6 +49,19 @@
       </div>
       <div class="w3-quarter w3-row-padding">
         <p>Create a collection of “toy models” for expected ELT targets in an open-source repository for use by others in the astronomical community.</p>
+      </div>
+    </div>
+
+    <div class="w3-container w3-padding-32">
+      <h2 class="w3-wide">Confirmed Keynote speakers</h2>
+      <div class="w3-left-align w3-large">
+        <ul>
+          <li class="w3-padding"><span style="font-weight: bold;">Suzanne Ramsay</span>, ESO ELT Instrumentation Project Manager</li>
+          <li class="w3-padding"><span style="font-weight: bold;">Ralf Siebenmorgen</span>, ESO Project Scientist for METIS</li>
+          <li class="w3-padding"><span style="font-weight: bold;">Gael Chauvin</span>, METIS Project Scientist</li>
+          <li class="w3-padding"><span style="font-weight: bold;">Roy van Boekel</span>, METIS Instrument Scientist</li>
+          <li class="w3-padding"><span style="font-weight: bold;">Ric Davies</span>, MICADO Principle Investigator</li>
+        </ul>
       </div>
     </div>
 
