--- a/websites/ELTWorkshopNov2024.html
+++ b/websites/ELTWorkshopNov2024.html
@@ -22,6 +22,11 @@
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
     <h1 class="w3-wide">Vienna University, Nov. 27-29, 2024</h1>
     <p class="w3-opacity"><i>A hybrid meeting for kick-starting observation time proposals for the main ELT science cases in preparation for first-light</i></p>
+
+    <p class="w3-justify">Proudly supported by :</p>
+    <img src="images/logos.png" style="width:100%">
+    
+    
     <h2 class="w3-wide">Why another ELT science meeting?</h2>
       <ul class="w3-ul w3-border" style="font-style:italic">
         <li>What do we want to see with the ELT?</li>
