--- a/websites/ELTWorkshopNov2024.html
+++ b/websites/ELTWorkshopNov2024.html
@@ -63,9 +63,10 @@
         <ul>
           <li class="w3-padding"><span style="font-weight: bold;">Suzanne Ramsay</span>, ESO ELT Instrumentation Project Manager</li>
           <li class="w3-padding"><span style="font-weight: bold;">Ralf Siebenmorgen</span>, ESO Project Scientist for METIS</li>
+          <li class="w3-padding"><span style="font-weight: bold;">Mario van den Ancker</span>, ESO ELT Operations Scientist</li>
+          <li class="w3-padding"><span style="font-weight: bold;">Ric Davies</span>, MICADO Principle Investigator</li>
           <li class="w3-padding"><span style="font-weight: bold;">Gael Chauvin</span>, METIS Project Scientist</li>
           <li class="w3-padding"><span style="font-weight: bold;">Roy van Boekel</span>, METIS Instrument Scientist</li>
-          <li class="w3-padding"><span style="font-weight: bold;">Ric Davies</span>, MICADO Principle Investigator</li>
         </ul>
       </div>
     </div>
