fix talk topic class

--- a/websites/ELTWorkshopNov2024.html
+++ b/websites/ELTWorkshopNov2024.html
@@ -217,7 +217,7 @@
         <span class="session-time">11:30 - 12:00</span>
         <span class="session-presenter">Suzanne Ramsay</span>
       </div>
-      <div class="session topic-science" style="grid-column: day-2-start; grid-row: time-1200 / time-1230;">
+      <div class="session topic-misc" style="grid-column: day-2-start; grid-row: time-1200 / time-1230;">
         <h4 class="session-title">ELT Early Science Operations</h3>
         <span class="session-time">12:00 - 12:30</span>
         <span class="session-presenter">Mario van den Ancker</span>
