--- a/websites/ELTWorkshopNov2024.html
+++ b/websites/ELTWorkshopNov2024.html
@@ -300,7 +300,7 @@
         <h4 class="session-title">Lunch</h4>
       </div>
 
-      <div class="session topic-misc" style="grid-column: day-3-start; grid-row: time-1400 / time-1600;">
+      <div class="session topic-scopesim" style="grid-column: day-3; grid-row: time-1400 / time-1600;">
         <h4 class="session-title">ScopeSim Help-desk</h3>
         <span class="session-subtitle">[Optional Participation]</span>
         <span class="session-time">14:00 - 16:00</span>
