--- a/websites/ELTWorkshopSept2025.html
+++ b/websites/ELTWorkshopSept2025.html
@@ -7,6 +7,25 @@
 <link rel="stylesheet" href="css/w3.css">
 <link rel="stylesheet" href="css/schedule.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <style>
+    table {
+      border-collapse: collapse;
+      font-size: 12px;
+    }
+    th, td {
+      border: 1px solid #999;
+      padding: 5px;
+      text-align: center;
+    }
+    .workshop { background-color: #d9ead3; }
+    .scopeSim { background-color: #f4cccc; }
+    .coffeeLunch { background-color: #fff2cc; }
+    .conferenceDinner { background-color: #c9daf8; }
+    .micado { background-color: #d9d2e9; }
+    .micadoDinner { background-color: #ead1dc; }
+  </style>
+
 </head>
 <body>
 <!-- Page content -->
@@ -14,7 +33,7 @@
   <div class="w3-display-container w3-center">
     <img src="images/ELT_sun.png" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-16 w3-mobile">
-      <h1 class="w3-wide", style="font-size: calc(20px + 3.5vw); font-weight: bold; text-shadow: 4px 4px 6px #000000;">“Spatial resolution”</h1>
+      <h1 class="w3-wide", style="font-size: calc(24px + 3.0  vw); font-weight: bold; text-shadow: 4px 4px 6px #000000;">“Spatial resolution”</h1>
       <p style="font-size: calc(10px + 1vw); font-weight: bold; text-shadow: 2px 2px 4px #000000;">Vienna ELT Science&nbsp;+&nbsp;Simulations Workshop&nbsp;#2</p>
     </div>
   </div>
@@ -58,23 +77,56 @@
     </div>
 
     <h2 class="w3-wide">Registration</h2>
-    <p>The deadline for regular registration is the <span class="w3-tag w3-red w3-large">15<sup>st</sup> of August, 2025</span>. The meeting will be limited to a maximum of 40 participants.</p>
-    <button class="w3-button w3-green w3-round-medium" style="font-size:30px" onclick="javascript:window.open('https://www.google.com/url?q=https://forms.gle/cxQDebyBrgMJKAdL7&sa=D&source=editors&ust=1726749673562964&usg=AOvVaw13PATUwGE0XxWtewQMMFo4', '_blank')">REGISTER HERE</button>
+    <p>The deadline for regular registration is the <span class="w3-tag w3-red w3-large">15<sup>st</sup> of August, 2025</span>.</p>
+    <p>The meeting will be limited to a maximum of 40 participants.</p>
+    <button class="w3-button w3-green w3-round-medium" style="font-size:30px"
+            onclick="javascript:window.open('https://forms.gle/Ui8Gn9GVZwP4K8bNA', '_blank')">REGISTER HERE</button>
 
     <h2 class="w3-wide">Location</h2>
     <p>The Observatory of the University of Vienna, <span class="w3-tag w3-red w3-large">Lecture Hall</span></p>
-    <p>
-      <button class="w3-button w3-blue w3-round-medium" style="margin: 0px 15px" onclick="javascript:window.open('https://event.univie.ac.at/en/venue-management/locations-and-rooms/main-building-of-the-university-of-vienna/lecture-halls/hoersaal-27-lecture-hall/', '_blank')">link to room</button>
-      <button class="w3-button w3-blue w3-round-medium" style="margin: 0px 15px" onclick="javascript:window.open('https://event.univie.ac.at/fileadmin/user_upload/d_event/Dokumente/Raummanagement/PLAENE_NEU/Plaene_Hauptgebaeude/Gebaeudeplan/univie_Lageplaene_Hauptgebaeude_2019.pdf', '_blank')">building floorplan</button>
-    </p>
-    <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3205.0104527152153!2d16.358380986014478!3d48.21318548791608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d07bdebd3d9dd%3A0xd7f665432f73f3c4!2sUniversity%20of%20Vienna!5e1!3m2!1sen!2sat!4v1727044069211!5m2!1sen!2sat" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+    <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3245.9916168914247!2d16.33158861847558!3d48.23167235293068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d07d60b69ca65%3A0x5bf947f054bdaadf!2sUniversit%C3%A4t%20Wien%20-%20Institut%20f%C3%BCr%20Astronomie!5e1!3m2!1sde!2shr!4v1750456719056!5m2!1sde!2shr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
   </div>
   
   <div class="w3-black" id="schedule">
-  <div class="w3-container w3-content w3-center w3-padding-32">
-    <h2 class="w3-wide">Schedule</h2>
+    <div class="w3-container w3-content w3-center w3-padding-32">
+      <h2 class="w3-wide">Schedule</h2>
 
-  </div>
+      <table>
+        <thead>
+          <tr>
+            <th>Time</th>
+            <th>Monday<br>HS</th>
+            <th>Workshop<br>SE1</th>
+            <th>SE2</th>
+            <th>Tuesday<br>HS</th>
+            <th>Workshop<br>SE1</th>
+            <th>SE2</th>
+            <th>Wednesday<br>HS</th>
+            <th>MICADO<br>SE1</th>
+            <th>Workshop<br>SE2</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>09:00</td><td></td><td></td><td></td><td class="workshop">2-1</td><td></td><td></td><td class="workshop">3-1</td><td></td><td></td></tr>
+          <tr><td>09:20</td><td></td><td></td><td></td><td class="workshop">2-2</td><td></td><td></td><td class="workshop">3-2</td><td></td><td></td></tr>
+          <tr><td>09:40</td><td></td><td></td><td></td><td class="workshop">2-3</td><td></td><td></td><td class="workshop">3-3</td><td></td><td></td></tr>
+          <tr><td>10:00</td><td class="coffeeLunch">Coffee</td><td colspan="2"></td><td class="workshop">2-4</td><td colspan="2"></td><td class="workshop">3-4</td><td colspan="2"></td></tr>
+          <tr><td>10:20</td><td class="coffeeLunch">Logistics</td><td colspan="2"></td><td colspan="3"></td><td colspan="3"></td></tr>
+          <tr><td>11:00</td><td class="workshop">1-1</td><td colspan="2"></td><td class="workshop">2-5</td><td></td><td></td><td class="workshop">3-5</td><td></td><td></td></tr>
+          <tr><td>11:20</td><td class="workshop">1-2</td><td colspan="2"></td><td class="workshop">2-6</td><td></td><td></td><td class="workshop">3-6</td><td></td><td></td></tr>
+          <tr><td>11:40</td><td class="workshop">1-3</td><td colspan="2"></td><td class="workshop">2-7</td><td></td><td></td><td class="workshop">3-7</td><td></td><td></td></tr>
+          <tr><td>12:00</td><td class="workshop">1-4</td><td colspan="2" class="coffeeLunch">Lunch</td><td class="workshop">2-8</td><td colspan="2"></td><td class="workshop">3-8</td><td colspan="2"></td></tr>
+          <tr><td>14:00</td><td class="workshop">1-5</td><td class="scopeSim">ScopeSim<br>Beginners</td><td class="scopeSim">Hackathon<br>Advanced</td><td colspan="3"></td><td class="scopeSim">ScopeSim</td><td class="micado">MICADO</td><td class="scopeSim">Helpdesk</td></tr>
+          <tr><td>14:20</td><td class="workshop">1-6</td><td colspan="2"></td><td colspan="3"></td><td colspan="3"></td></tr>
+          <tr><td>14:40</td><td class="workshop">1-7</td><td colspan="2"></td><td colspan="3"></td><td colspan="3"></td></tr>
+          <tr><td>15:00</td><td class="workshop">1-8</td><td colspan="2"></td><td colspan="3"></td><td colspan="3"></td></tr>
+          <tr><td>15:20</td><td class="coffeeLunch">Coffee</td><td colspan="2"></td><td colspan="3"></td><td colspan="3"></td></tr>
+          <tr><td>16:00</td><td class="scopeSim">ScopeSim<br>Beginners</td><td class="scopeSim">Introduction</td><td class="scopeSim">Advanced</td><td class="scopeSim">ScopeSim<br>Beginners</td><td class="scopeSim">Hackathon</td><td class="scopeSim">Advanced</td><td class="scopeSim">ScopeSim</td><td class="micado">MICADO</td><td class="scopeSim">Helpdesk</td></tr>
+          <tr><td>19:00</td><td class="conferenceDinner" colspan="3">Conference Dinner</td><td colspan="5"></td><td class="micadoDinner" colspan="2">MICADO Dinner</td></tr>
+        </tbody>
+      </table>
+
+    </div>
   </div>
 
   <div class="w3-container w3-content w3-center w3-padding-32">
