--- a/websites/ELTWorkshopSept2025.html
+++ b/websites/ELTWorkshopSept2025.html
@@ -107,22 +107,33 @@
           </tr>
         </thead>
         <tbody>
-          <tr><td>09:00</td><td></td><td></td><td></td><td class="workshop">2-1</td><td></td><td></td><td class="workshop">3-1</td><td></td><td></td></tr>
-          <tr><td>09:20</td><td></td><td></td><td></td><td class="workshop">2-2</td><td></td><td></td><td class="workshop">3-2</td><td></td><td></td></tr>
-          <tr><td>09:40</td><td></td><td></td><td></td><td class="workshop">2-3</td><td></td><td></td><td class="workshop">3-3</td><td></td><td></td></tr>
-          <tr><td>10:00</td><td class="coffeeLunch">Coffee</td><td colspan="2"></td><td class="workshop">2-4</td><td colspan="2"></td><td class="workshop">3-4</td><td colspan="2"></td></tr>
-          <tr><td>10:20</td><td class="coffeeLunch">Logistics</td><td colspan="2"></td><td colspan="3"></td><td colspan="3"></td></tr>
-          <tr><td>11:00</td><td class="workshop">1-1</td><td colspan="2"></td><td class="workshop">2-5</td><td></td><td></td><td class="workshop">3-5</td><td></td><td></td></tr>
-          <tr><td>11:20</td><td class="workshop">1-2</td><td colspan="2"></td><td class="workshop">2-6</td><td></td><td></td><td class="workshop">3-6</td><td></td><td></td></tr>
-          <tr><td>11:40</td><td class="workshop">1-3</td><td colspan="2"></td><td class="workshop">2-7</td><td></td><td></td><td class="workshop">3-7</td><td></td><td></td></tr>
-          <tr><td>12:00</td><td class="workshop">1-4</td><td colspan="2" class="coffeeLunch">Lunch</td><td class="workshop">2-8</td><td colspan="2"></td><td class="workshop">3-8</td><td colspan="2"></td></tr>
-          <tr><td>14:00</td><td class="workshop">1-5</td><td class="scopeSim">ScopeSim<br>Beginners</td><td class="scopeSim">Hackathon<br>Advanced</td><td colspan="3"></td><td class="scopeSim">ScopeSim</td><td class="micado">MICADO</td><td class="scopeSim">Helpdesk</td></tr>
-          <tr><td>14:20</td><td class="workshop">1-6</td><td colspan="2"></td><td colspan="3"></td><td colspan="3"></td></tr>
-          <tr><td>14:40</td><td class="workshop">1-7</td><td colspan="2"></td><td colspan="3"></td><td colspan="3"></td></tr>
-          <tr><td>15:00</td><td class="workshop">1-8</td><td colspan="2"></td><td colspan="3"></td><td colspan="3"></td></tr>
-          <tr><td>15:20</td><td class="coffeeLunch">Coffee</td><td colspan="2"></td><td colspan="3"></td><td colspan="3"></td></tr>
-          <tr><td>16:00</td><td class="scopeSim">ScopeSim<br>Beginners</td><td class="scopeSim">Introduction</td><td class="scopeSim">Advanced</td><td class="scopeSim">ScopeSim<br>Beginners</td><td class="scopeSim">Hackathon</td><td class="scopeSim">Advanced</td><td class="scopeSim">ScopeSim</td><td class="micado">MICADO</td><td class="scopeSim">Helpdesk</td></tr>
-          <tr><td>19:00</td><td class="conferenceDinner" colspan="3">Conference Dinner</td><td colspan="5"></td><td class="micadoDinner" colspan="2">MICADO Dinner</td></tr>
+          <tr><td>Time</td><td>Monday</td><td>Tuesday</td><td>Wednesday</td></tr>
+          <tr><td>09:00</td><td></td><td></td><td></td></tr>
+          <tr><td>09:20</td><td></td><td></td><td></td></tr>
+          <tr><td>09:40</td><td></td><td></td><td></td></tr>
+          <tr><td>10:00</td><td></td><td></td><td></td></tr>
+          <tr><td>10:20</td><td></td><td></td><td></td></tr>
+          <tr><td>10:40</td><td></td><td></td><td></td></tr>
+          <tr><td>11:00</td><td></td><td></td><td></td></tr>
+          <tr><td>11:20</td><td></td><td></td><td></td></tr>
+          <tr><td>11:40</td><td></td><td></td><td></td></tr>
+          <tr><td>12:00</td><td></td><td></td><td></td></tr>
+          <tr><td>12:20</td><td></td><td></td><td></td></tr>
+          <tr><td>12:40</td><td></td><td></td><td></td></tr>
+          <tr><td>13:00</td><td></td><td></td><td></td></tr>
+          <tr><td>13:20</td><td></td><td></td><td></td></tr>
+          <tr><td>13:40</td><td></td><td></td><td></td></tr>
+          <tr><td>14:00</td><td></td><td></td><td></td></tr>
+          <tr><td>14:20</td><td></td><td></td><td></td></tr>
+          <tr><td>14:40</td><td></td><td></td><td></td></tr>
+          <tr><td>15:00</td><td></td><td></td><td></td></tr>
+          <tr><td>15:20</td><td></td><td></td><td></td></tr>
+          <tr><td>15:40</td><td></td><td></td><td></td></tr>
+          <tr><td>16:00</td><td></td><td></td><td></td></tr>
+          <tr><td>16:20</td><td></td><td></td><td></td></tr>
+          <tr><td>16:40</td><td></td><td></td><td></td></tr>
+          <tr><td>17:00</td><td></td><td></td><td></td></tr>
+          <tr><td>17:20</td><td></td><td></td><td></td></tr>
         </tbody>
       </table>
 
