remove explicit references to MICAOD and METIS

--- a/websites/ELTWorkshopSept2025.html
+++ b/websites/ELTWorkshopSept2025.html
@@ -60,7 +60,7 @@
     <p class="w3-justify">The Austrian Academy of Science is financing <span class="w3-tag w3-red">a series of 5 yearly meetings</span> leading up to first light. The main aim is to bring together the future ELT community and to help build the science cases and proposals that will shape the ELT’s initial observing periods.</p>
 
     <h2 class="w3-wide">Meeting format</h2>
-    <p class="w3-justify">This three-day hybrid meeting aims to transform the numerous discussions on first-light ELT science topics into simulated observations that can be used to justify observing time in the earliest stages of ELT.</p>
+    <p class="w3-justify">This three-day hybrid meeting aims to transform the numerous discussions on early ELT science topics into simulated observations that can be used to justify observing time in the earliest stages of ELT.</p>
     <p class="w3-justify">The meeting will complement traditional <span class="w3-tag w3-red">scientific presentations</span> in the mornings with an observation <span class="w3-tag w3-red">simulation hackathon</span> in the afternoons.</p>
   </div>
 
@@ -86,7 +86,7 @@
     <div class="w3-row w3-padding-32">
       <h2 class="w3-wide">Goals of this Meeting</h2>
       <div class="w3-quarter w3-row-padding">
-        <p>Raise awareness of the main ELT science cases for the first light instruments MICADO and METIS through a series of scientific presentations (6x 1.5hr sessions @ 15+5 min presentations).</p>
+        <p>Raise awareness of the main ELT science cases for the first generation of instruments through a series of scientific presentations (24x 15+5 min presentations).</p>
       </div>
       <div class="w3-quarter w3-row-padding">
         <p>Foster collaboration on science feasibility studies between consortia.</p>
@@ -193,7 +193,7 @@
       <div class="w3-third w3-row-padding">
         <h3>2027</h3>
         <h4>High Contrast</h4>
-        <p>Both first light instruments include various coronagraphic modes. What do we expect to be able to discover at single digit lambda/D distances with the ELT.</p>
+        <p>Many of the first generation instruments include various coronagraphic modes. What do we expect to be able to discover at single digit lambda/D distances with the ELT.</p>
       </div>
       <div class="w3-third w3-row-padding">
         <h3>2028</h3>
