--- a/websites/ELTWorkshopSept2025.html
+++ b/websites/ELTWorkshopSept2025.html
@@ -35,14 +35,14 @@
 <div class="w3-content" style="max-width:2000px">
   <div class="w3-display-container w3-center">
     <img src="images/ELT_sun.png" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-16 w3-mobile">
+    <div class="w3-display-middle w3-container w3-text-white w3-padding-16 w3-mobile">
+      <p style="font-size: calc(10px + 1vw); font-weight: bold; text-shadow: 2px 2px 4px #000000;">Vienna ELT Science&nbsp;+&nbsp;Simulations Workshop <br>#2</p>
       <h1 class="w3-wide", style="font-size: calc(24px + 3.0vw); font-weight: bold; text-shadow: 4px 4px 6px #000000;">“Spatial resolution”</h1>
-      <p style="font-size: calc(10px + 1vw); font-weight: bold; text-shadow: 2px 2px 4px #000000;">Vienna ELT Science&nbsp;+&nbsp;Simulations Workshop&nbsp;#2</p>
     </div>
   </div>
 
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
-    <h1 class="w3-wide">Vienna University, Sept. 22-24, 2024</h1>
+    <h1 class="w3-wide">Vienna University, Sept. 22-24, 2025</h1>
     <p class="w3-opacity"><i>A hybrid meeting for bringing together the ELT instrumentation and scientific communities in anticipation of the ELT's first light</i></p>
 
     <p class="w3-justify">Proudly supported by :</p>
