Added ANDES and METIS speakers

--- a/websites/ELTWorkshopSept2025.html
+++ b/websites/ELTWorkshopSept2025.html
@@ -72,10 +72,10 @@
         <ul>
           <li class="w3-padding"><strong>ESO</strong>: TBD</li>
           <li class="w3-padding"><strong>MICADO</strong>: TBD</li>
-          <li class="w3-padding"><strong>METIS</strong>: TBD</li>
+          <li class="w3-padding"><strong>METIS</strong>: Wolfgang Brandner (Cal Sci)</li>
           <li class="w3-padding"><strong>HARMONI</strong>: TBD</li>
           <li class="w3-padding"><strong>MOSAIC</strong>: TBD</li>
-          <li class="w3-padding"><strong>ANDES</strong>: TBD</li>
+          <li class="w3-padding"><strong>ANDES</strong>: Alessandro Marconi (PI) + Livia Origlia (Inst Sci)</li>
         </ul>
       </div>
     </div>
