added instruments to schedules

--- a/websites/ELTWorkshopSept2025.html
+++ b/websites/ELTWorkshopSept2025.html
@@ -142,20 +142,20 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="workshop"><td class="nix">09:00</td><td class="nix"></td><td>Pres 2-1</td><td>Pres 3-1</td></tr>
-          <tr class="workshop"><td class="nix">09:20</td><td class="nix"></td><td>Pres 2-2</td><td>Pres 3-2</td></tr>
-          <tr class="workshop"><td class="nix">09:40</td><td class="nix"></td><td>Pres 2-3</td><td>Pres 3-3</td></tr>
-          <tr class="workshop"><td class="nix">10:00</td><td class="nix"></td><td>Pres 2-4</td><td>Pres 3-4</td></tr>
+          <tr class="workshop"><td class="nix">09:00</td><td class="nix"></td><td>METIS 2-1</td><td>MOSAIC 3-1</td></tr>
+          <tr class="workshop"><td class="nix">09:20</td><td class="nix"></td><td>METIS 2-2</td><td>MOSAIC 3-2</td></tr>
+          <tr class="workshop"><td class="nix">09:40</td><td class="nix"></td><td>METIS 2-3</td><td>MOSAIC 3-3</td></tr>
+          <tr class="workshop"><td class="nix">10:00</td><td class="nix"></td><td>METIS 2-4</td><td>MOSAIC 3-4</td></tr>
           <tr class="coffeeLunch"><td class="nix">10:20</td><td>Coffee</td><td>Coffee</td><td>Coffee</td></tr>
-          <tr class="workshop"><td class="nix">11:00</td><td>Pres 1-1</td><td>Pres 2-5</td><td>Pres 3-5</td></tr>
-          <tr class="workshop"><td class="nix">11:20</td><td>Pres 1-2</td><td>Pres 2-6</td><td>Pres 3-6</td></tr>
-          <tr class="workshop"><td class="nix">11:40</td><td>Pres 1-3</td><td>Pres 2-7</td><td>Pres 3-7</td></tr>
-          <tr class="workshop"><td class="nix">12:00</td><td>Pres 1-4</td><td>Pres 2-8</td><td>Pres 3-8</td></tr>
+          <tr class="workshop"><td class="nix">11:00</td><td>ELT 1-1</td><td>HARMONI 2-5</td><td>MICADO 3-5</td></tr>
+          <tr class="workshop"><td class="nix">11:20</td><td>ELT 1-2</td><td>HARMONI 2-6</td><td>MICADO 3-6</td></tr>
+          <tr class="workshop"><td class="nix">11:40</td><td>ELT 1-3</td><td>HARMONI 2-7</td><td>MICADO 3-7</td></tr>
+          <tr class="workshop"><td class="nix">12:00</td><td>ELT 1-4</td><td>HARMONI 2-8</td><td>MICADO 3-8</td></tr>
           <tr class="coffeeLunch"><td class="nix">12:20</td><td>Lunch</td><td>Lunch</td><td>Lunch</td></tr>
-          <tr class="scopeSim"><td class="nix">14:00</td><td class="workshop">Pres 1-5</td><td>ScopeSim Hackathon</td><td>ScopeSim Hackathon</td></tr>
-          <tr class="scopeSim"><td class="nix">14:20</td><td class="workshop">Pres 1-6</td><td>Part 1</td><td>Part 3</td></tr>
-          <tr class="scopeSim"><td class="nix">14:40</td><td class="workshop">Pres 1-7</td><td></td><td></td></tr>
-          <tr class="scopeSim"><td class="nix">15:00</td><td class="workshop">Pres 1-8</td><td></td><td></td></tr>
+          <tr class="scopeSim"><td class="nix">14:00</td><td class="workshop">ANDES 1-5</td><td>ScopeSim Hackathon</td><td>ScopeSim Hackathon</td></tr>
+          <tr class="scopeSim"><td class="nix">14:20</td><td class="workshop">ANDES 1-6</td><td>Part 1</td><td>Part 3</td></tr>
+          <tr class="scopeSim"><td class="nix">14:40</td><td class="workshop">ANDES 1-7</td><td></td><td></td></tr>
+          <tr class="scopeSim"><td class="nix">15:00</td><td class="workshop">ANDES 1-8</td><td></td><td></td></tr>
           <tr class="coffeeLunch"><td class="nix">15:20</td><td>Coffee</td><td>Coffee</td><td>Coffee</td></tr>
           <tr class="scopeSim"><td class="nix">16:00</td><td>ScopeSim Intro</td><td>ScopeSim Hackathon</td><td>ScopeSim Hackathon</td></tr>
           <tr class="scopeSim"><td class="nix">16:20</td><td>(Beginner/Advanced)</td><td>Part 2</td><td>Part 4 (Optional)</td></tr>
