added Joel Vernet

--- a/websites/ELTWorkshopSept2025.html
+++ b/websites/ELTWorkshopSept2025.html
@@ -70,7 +70,7 @@
       <h2 class="w3-wide w3-center">Keynote speakers</h2>
       <div class="w3-left-align w3-large">
         <ul>
-          <li class="w3-padding"><strong>ESO</strong>: TBD</li>
+          <li class="w3-padding"><strong>ESO</strong>: Joel Vernet (ELT Prog Sci)</li>
           <li class="w3-padding"><strong>MICADO</strong>: TBD</li>
           <li class="w3-padding"><strong>METIS</strong>: Wolfgang Brandner (Cal Sci)</li>
           <li class="w3-padding"><strong>HARMONI</strong>: TBD</li>
