added MOSAIC speakers

--- a/websites/ELTWorkshopSept2025.html
+++ b/websites/ELTWorkshopSept2025.html
@@ -71,11 +71,11 @@
       <div class="w3-left-align w3-large">
         <ul>
           <li class="w3-padding"><strong>ESO</strong>: Joel Vernet (ELT Prog Sci)</li>
-          <li class="w3-padding"><strong>MICADO</strong>: TBD</li>
-          <li class="w3-padding"><strong>METIS</strong>: Wolfgang Brandner (Cal Sci)</li>
-          <li class="w3-padding"><strong>HARMONI</strong>: TBD</li>
-          <li class="w3-padding"><strong>MOSAIC</strong>: TBD</li>
           <li class="w3-padding"><strong>ANDES</strong>: Alessandro Marconi (PI) + Livia Origlia (Inst Sci)</li>
+          <li class="w3-padding"><strong>MOSAIC</strong>: Roser Pello (PI) + Mathieu Puech (co-PI + Proj Sci)</li>
+          <li class="w3-padding"><strong>METIS</strong>: Wolfgang Brandner (Cal Sci)</li>
+          <li class="w3-padding"><strong>MICADO</strong>: TBD</li>
+          <li class="w3-padding"><strong>HARMONI</strong>: TBD</li>
         </ul>
       </div>
     </div>
