added Ric and Carmelo

--- a/websites/ELTWorkshopSept2025.html
+++ b/websites/ELTWorkshopSept2025.html
@@ -74,7 +74,8 @@
           <li class="w3-padding"><strong>ANDES</strong>: Alessandro Marconi (PI) + Livia Origlia (Inst Sci)</li>
           <li class="w3-padding"><strong>MOSAIC</strong>: Roser Pello (PI) + Mathieu Puech (co-PI + Proj Sci)</li>
           <li class="w3-padding"><strong>METIS</strong>: Wolfgang Brandner (Cal Sci)</li>
-          <li class="w3-padding"><strong>MICADO</strong>: TBD</li>
+          <li class="w3-padding"><strong>MICADO</strong>: Richard Davies (PI)</li>
+          <li class="w3-padding"><strong>MORFEO</strong>: Carmelo Archidiacono (Inst-Sci)</li>
           <li class="w3-padding"><strong>HARMONI</strong>: TBD</li>
         </ul>
       </div>
